# eduword

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  eduword.desktop  eduword.qrc  install.sh
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
